--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ serde_json = "1.0"
 solana-client = "=1.8.12"
 solana-sdk = "=1.8.12"
 spl-associated-token-account = { version = "1.0", default_features = false, features = ["no-entrypoint"] }
+spl-memo = { version = "3.0", default_features = false, features = ["no-entrypoint"] }
 spl-token = { version = "3.2", default_features = false, features = ["no-entrypoint"] }
 structopt = "0.3"
 termimad = "0.20"
