Buildkite: change queue

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,4 +3,6 @@ steps:
     command:
       - "./.buildkite/steps/build_image.sh"
       - "./.buildkite/steps/push_image.sh"
+    agents:
+      queue: "testing"      
 
