--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,6 +3,6 @@ steps:
     command:
       - "./.buildkite/steps/build_image.sh"
       - "./.buildkite/steps/upload_image.sh"
-#    agents:
-#      queue: "testing"      
+    agents:
+      queue: "testing"      
 
