19 fix ci pipeline (#20)
* fix pipeline

* separate publish stage

* fix buld-image.sh script

* fix buld-image.sh script

* +

* remove publish step

Co-authored-by: Ivan Loboda <lobodatell@yandex.ru>

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,5 +3,5 @@ steps:
     command:
       - "./.buildkite/steps/build_image.sh"
       - "./.buildkite/steps/upload_image.sh"
-    # agents:
-    #   queue: "testing"      
+      - "./.buildkite/steps/publish_image.sh"
+
