--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,4 +40,4 @@ tracing = "0.1"
 tracing-log = "0.1"
 # tracing-subscriber with disabled feature "ansi" to force colorless logs
 tracing-subscriber = { version = "0.3", default_features = false, features = ["env-filter", "std", "fmt", "json", "time", "local-time", "tracing-log", "smallvec", "parking_lot"] }
-web3 = "0.18"
+web3 = { version = "0.18", path = "rust-web3" }
