--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,12 @@ name = "faucet"
 description = "NeonLabs Faucet Service"
 authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]
 repository = "https://github.com/neonlabsorg/neon-faucet"
-version = "0.10.0-dev"
+version = "0.11.0-dev"
 edition = "2021"
 
 [dependencies]
 actix-cors = { version = "0.6", default-features = false }
-actix-web = { version = "4.0", default-features = false, features = ["macros"] }
+actix-web = { version = "4.1", default-features = false, features = ["macros"] }
 chrono = "0.4"
 clap = { version = "3.1", features = ["derive"] }
 derive-new = "0.5"
@@ -25,16 +25,16 @@ num_cpus = "1.13"
 secp256k1 = "0.21"
 serde = { version = "1.0", default_features = false }
 serde_json = "1.0"
-solana-account-decoder = "=1.9.12"
-solana-client = "=1.9.12"
-solana-sdk = "=1.9.12"
-spl-associated-token-account = { version = "1.0", default_features = false, features = ["no-entrypoint"] }
+solana-account-decoder = "=1.10.30"
+solana-client = "=1.10.30"
+solana-sdk = "=1.10.30"
+spl-associated-token-account = { version = "=1.0.5", default_features = false, features = ["no-entrypoint"] }
 spl-memo = { version = "3.0", default_features = false, features = ["no-entrypoint"] }
-spl-token = { version = "3.2", default_features = false, features = ["no-entrypoint"] }
+spl-token = { version = "=3.3.0", default_features = false, features = ["no-entrypoint"] }
 termimad = "0.20"
 thiserror = "1.0"
 time = { version = "0.3", default_features = false, features = ["macros"] }
-tokio = { version = "1.17", default_features = false, features = ["rt"] }
+tokio = { version = "1.14", default_features = false, features = ["rt"] }
 toml = "0.5"
 tracing = "0.1"
 tracing-log = "0.1"
