--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ minimad = "0.9"
 md5 = "0.7"
 nix = "0.23"
 num_cpus = "1.13"
-secp256k1 = "0.21"
+secp256k1 = "=0.21.3"
 serde = { version = "1.0", default_features = false }
 serde_json = "1.0"
 solana-account-decoder = "=1.9.12"
