--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,8 @@ updates:
           time: "10:00"
           timezone: "UTC"
       target-branch: "develop"
+      ignore:
+          - dependency-name: "secp256k1"
       open-pull-requests-limit: 10
       assignees:
         - "vakond"
