--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,14 +35,16 @@ jobs:
         run: |
           docker build -f Dockerfile . --tag=neonlabsorg/faucet:${GITHUB_SHA}
 
-      - name: publish image
+      - name: publish latest tag
+        if: github.ref_name == 'develop'
+        run: |
+          docker push neonlabsorg/faucet:${GITHUB_SHA}
+          docker tag neonlabsorg/faucet:${GITHUB_SHA} neonlabsorg/faucet:latest
+          docker push neonlabsorg/faucet:latest
+
+      - name: publish develop image
+        if: github.ref_name != 'develop'
         run: |
           docker push neonlabsorg/faucet:${GITHUB_SHA}
           docker tag neonlabsorg/faucet:${GITHUB_SHA} neonlabsorg/faucet:${GITHUB_HEAD_REF}
           docker push neonlabsorg/faucet:${GITHUB_HEAD_REF}
-
-      - name: publish latest tag
-        if: github.ref_name == 'develop'
-        run: |
-          docker tag neonlabsorg/faucet:${GITHUB_SHA} neonlabsorg/faucet:latest
-          docker push neonlabsorg/faucet:latest
