--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,8 +43,15 @@ jobs:
           docker push neonlabsorg/faucet:latest
 
       - name: publish develop image
-        if: github.ref_name != 'develop'
+        if: github.ref_type == 'branch' && github.ref_name != 'develop'
         run: |
           docker push neonlabsorg/faucet:${GITHUB_SHA}
           docker tag neonlabsorg/faucet:${GITHUB_SHA} neonlabsorg/faucet:${GITHUB_HEAD_REF}
           docker push neonlabsorg/faucet:${GITHUB_HEAD_REF}
+
+      - name: publish tag image
+        if: github.ref_type == 'tag'
+        run: |
+          docker push neonlabsorg/faucet:${GITHUB_SHA}
+          docker tag neonlabsorg/faucet:${GITHUB_SHA} neonlabsorg/faucet:${GITHUB_REF_NAME}
+          docker push neonlabsorg/faucet:${GITHUB_REF_NAME}
